--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -5,10 +5,7 @@ on:
     branches: [ master ]
 
 jobs:
-  deploy:
-    runs-on: self-hosted
-    steps:
-    - uses: actions/checkout@v2
+  build:
     - name: Setup node
       uses: actions/setup-node@v1
       with:
@@ -18,6 +15,26 @@ jobs:
       run: npm install
     - name: Build
       run: npm run build
+    
+    - name: Upload artifacts
+      uses: actions/upload-artifact@v1
+      with:
+        name: dist
+        path: dist
+        description: The built dist files
+        
+  deploy:
+    runs-on: self-hosted
+    needs: [ build ]
+    steps:
+    - name: Download artifacts
+      uses: actions/download-artifact@v1
+      with:
+        name: dist
+        path: dist
+        description: The built dist files
 
     - name: Deploy (copy files for self-hosted nginx)
-      run: cp -r dist/* /var/www/gotwitch/html/    
+      run: |
+        mkdir -p /var/www/gotwitch/html/
+        cp -r dist/* /var/www/gotwitch/html/    
