--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "build:prod": "env-cmd -f ./.env.prod. npm run build",
+    "build:prod": "env-cmd -f ./.env.prod npm run build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
