--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.6.5",
     "roboto-fontface": "*",
     "vue": "^3.0.0",
+    "vue-gtag": "^2.0.1",
     "vue-plugin-load-script": "^2.x.x",
     "vuetify": "^3.0.0-alpha.0",
     "webfontloader": "^1.0.0"
