--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "vue": "^3.0.0",
     "vue-gtag": "^2.0.1",
     "vue-plugin-load-script": "^2.x.x",
-    "vuetify": "^3.0.0-alpha.0",
+    "vuetify": "^3.0.0-beta.0",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
