--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mdi/font": "5.9.55",
     "axios": "^0.26.0",
     "core-js": "^3.6.5",
+    "lodash.clonedeep": "^4.5.0",
     "roboto-fontface": "*",
     "vue": "^3.0.0",
     "vue-gtag": "^2.0.1",
@@ -20,6 +21,7 @@
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
+    "@types/lodash.clonedeep": "^4.5.6",
     "@types/webfontloader": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
