--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "vue": "^3.0.0",
     "vue-gtag": "^2.0.1",
     "vue-plugin-load-script": "^2.x.x",
-    "vuetify": "^3.0.0-beta.0",
+    "vuetify": "^3.2.33",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
@@ -38,7 +38,7 @@
     "sass": "^1.38.0",
     "sass-loader": "^10.0.0",
     "typescript": "~4.1.5",
-    "vue-cli-plugin-vuetify": "~2.4.5",
-    "vuetify-loader": "^2.0.0-alpha.0"
+    "vue-cli-plugin-vuetify": "~2.4.8",
+    "vuetify-loader": "^2.0.0-alpha.9"
   }
 }
