--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "vue": "^3.0.0",
     "vue-gtag": "^2.0.1",
     "vue-plugin-load-script": "^2.x.x",
-    "vuetify": "^3.2.33",
+    "vuetify": "^3.0.0-beta.0",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
