--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "postbuild": "react-snap"
   },
   "reactSnap": {
-    "puppeteerArgs": ["--no-sandbox", "--disable-setuid-sandbox"],
+    "puppeteerArgs": [
+      "--no-sandbox",
+      "--disable-setuid-sandbox"
+    ],
     "source": "dist",
     "minifyHtml": {
       "collapseWhitespace": false,
@@ -20,6 +23,7 @@
   "dependencies": {
     "@mdi/font": "5.9.55",
     "axios": "^0.26.0",
+    "axios-cache-adapter": "^2.7.3",
     "core-js": "^3.6.5",
     "lodash.clonedeep": "^4.5.0",
     "roboto-fontface": "*",
