--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - name: Setup node
@@ -18,6 +18,10 @@ jobs:
       run: npm install
     - name: Build
       run: npm run build:prod
+    
+    - name: Snap
+      continue-on-error: true
+      run: npm run react-snap
     
     - name: Upload artifacts
       uses: actions/upload-artifact@v1
