--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "vue": "^3.2.41",
     "vue-gtag": "^2.0.1",
     "vue-plugin-load-script": "^2.x.x",
+    "vue-toastification": "^2.0.0-rc.5",
     "vuetify": "^3.0.0-beta.13",
     "webfontloader": "^1.0.0"
   },
