--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "vue-gtag": "^2.0.1",
     "vue-plugin-load-script": "^2.x.x",
     "vue-toastification": "^2.0.0-rc.5",
-    "vuetify": "^3.0.0-beta.13",
+    "vuetify": "3.0.0-beta.14",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
